--- a/LightBnB_WebApp-master/public/index.html
+++ b/LightBnB_WebApp-master/public/index.html
@@ -35,6 +35,7 @@
   <script src="javascript/components/signup_form.js"></script>
   <script src="javascript/components/new_reservation_form.js"></script>
   <script src="javascript/components/property_reviews.js"></script>
+  <script src="javascript/components/new_review_form.js"></script>
 
 
 
